k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extractor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extractor
  template:
    metadata:
      labels:
        app: extractor
    spec:
      containers:
      - name: extractor
        image: ghcr.io/multimoml/extractor:latest
        ports:
        - containerPort: 6000
          name: server
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /extractor/self
            port: server
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /extractor/self
            port: server
          initialDelaySeconds: 10
          periodSeconds: 3
      metrics:
        - type: Resource
          resource:
            name: cpu
            target:
              type: Utilization
              averageUtilization: 50
      terminationGracePeriodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: extractor
spec:
  type: ClusterIP
  ports:
  - port: 6000
    targetPort: server
  selector:
    app: extractor

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: extractor
  namespace: default

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`multimo.ml`) && PathPrefix(`/extractor/`)
      kind: Rule
      services:
        - name: extractor
          port: 6000
